GNOME Bugzilla – Bug 756240
adaptivedemux: download thread should stop in case of multiple download errors
Last modified: 2015-10-30 12:51:28 UTC
The download thread is stopped in case of EOS, NOT_LINKED or FLUSHING, but it does not stop in case of consecutive download errors. I believe it should do so.
Created attachment 312909 [details] [review] proposed patch
Created attachment 312936 [details] [review] proposed patch Seems that stopping the task is not enough. We also need to change the src element state to NULL. If we don't do it, the pipeline cannot change state from PLAYING to PAUSED (because src element is locked and will return its last state which is FAILING, leading to a failure in changing pipeline state).
commit a2ffe7e9792365a998cb68f7a8330a85b7dc360b Author: Florin Apostol <florin.apostol@oregan.net> Date: Fri Oct 30 12:49:20 2015 +0000 adaptivedemux: stop task on multiple download errors On multiple download errors, we stop the download task and change the src element state to NULL. https://bugzilla.gnome.org/show_bug.cgi?id=756240